--- a/project.css
+++ b/project.css
@@ -36,7 +36,7 @@ nav {
   height: 40px;
   line-height: 43px;
   margin: 3px;
-  padding: 0px, 22px;
+  padding: 0px 22px;
   display: flex;
   font-size: 0.8em;
   text-transform: uppercase;
